--- a/Exemplo TEF Android API/TefElginExampleJava/app/src/main/res/layout/activity_main.xml
+++ b/Exemplo TEF Android API/TefElginExampleJava/app/src/main/res/layout/activity_main.xml
@@ -273,27 +273,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <Button
+                        android:id="@+id/buttonPIX"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="15sp"
+                        android:background="@drawable/round_button"
+                        android:text="PIX"
+                        android:textColor="@color/design_default_color_on_primary"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/buttonResetCachedCNPJ"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="40dp"
+                        android:layout_weight="1"
                         android:background="@drawable/round_button"
                         android:text="ALTERAR CNPJ CACHE"
                         android:textColor="@color/design_default_color_on_primary"
                         android:textSize="12sp"
                         android:textStyle="bold" />
-
-<!--                    <Button-->
-<!--                        android:id="@+id/buttonPIX"-->
-<!--                        android:layout_width="65dp"-->
-<!--                        android:layout_height="40dp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:background="@drawable/round_button"-->
-<!--                        android:text="PIX"-->
-<!--                        android:textColor="@color/design_default_color_on_primary"-->
-<!--                        android:textSize="12sp"-->
-<!--                        android:textStyle="bold" />-->
 
                 </LinearLayout>
 
